FIX: open contact links in new tab

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="footer">
       <div class="contact">
-        <a href="https://x.com/ashe_neth">
+        <a href="https://x.com/ashe_neth" target="_blank">
           <div class="icon" aria-hidden="true">
             <svg viewBox="0 0 1200 1227" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" fill=var(--eerie-black)>
               <path d="M714.163 519.284L1160.89 0H1055.03L667.137 450.887L357.328 0H0L468.492 681.821L0 1226.37H105.866L515.491 750.218L842.672 1226.37H1200L714.137 519.284H714.163ZM569.165 687.828L521.697 619.934L144.011 79.6944H306.615L611.412 515.685L658.88 583.579L1055.08 1150.3H892.476L569.165 687.854V687.828Z">
@@ -66,7 +66,7 @@
           </div>
         </a>
 
-        <a href="https://github.com/asheneth">
+        <a href="https://github.com/asheneth" target="_blank">
           <div class="icon" aria-hidden="true">
             <svg viewBox="0 0 24 24" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" fill=var(--eerie-black)>
               <path d="M12.5.75C6.146.75 1 5.896 1 12.25c0 5.089 3.292 9.387 7.863 10.91.575.101.79-.244.79-.546 0-.273-.014-1.178-.014-2.142-2.889.532-3.636-.704-3.866-1.35-.13-.331-.69-1.352-1.18-1.625-.402-.216-.977-.748-.014-.762.906-.014 1.553.834 1.769 1.179 1.035 1.74 2.688 1.25 3.349.948.1-.747.402-1.25.733-1.538-2.559-.287-5.232-1.279-5.232-5.678 0-1.25.445-2.285 1.178-3.09-.115-.288-.517-1.467.115-3.048 0 0 .963-.302 3.163 1.179.92-.259 1.897-.388 2.875-.388.977 0 1.955.13 2.875.388 2.2-1.495 3.162-1.179 3.162-1.179.633 1.581.23 2.76.115 3.048.733.805 1.179 1.825 1.179 3.09 0 4.413-2.688 5.39-5.247 5.678.417.36.776 1.05.776 2.128 0 1.538-.014 2.774-.014 3.162 0 .302.216.662.79.547C20.709 21.637 24 17.324 24 12.25 24 5.896 18.854.75 12.5.75Z">
@@ -75,7 +75,7 @@
           </div>
         </a>
 
-        <a href="https://www.linkedin.com/in/ashe-neth/">
+        <a href="https://www.linkedin.com/in/ashe-neth/" target="_blank">
           <div class="icon" aria-hidden="true">
             <svg viewBox="0 0 27 27" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" fill=var(--eerie-black)>
               <path d="M1.91 0h22.363a1.91 1.91 0 011.909 1.91v22.363a1.91 1.91 0 01-1.91 1.909H1.91A1.91 1.91 0 010 24.272V1.91A1.91 1.91 0 011.91 0zm1.908 22.364h3.818V9.818H3.818zM8.182 5.727a2.455 2.455 0 10-4.91 0 2.455 2.455 0 004.91 0zm2.182 4.091v12.546h3.818v-6.077c0-2.037.75-3.332 2.553-3.332 1.3 0 1.81 1.201 1.81 3.332v6.077h3.819v-6.93c0-3.74-.895-5.78-4.667-5.78-1.967 0-3.277.921-3.788 1.946V9.818z">
@@ -84,7 +84,7 @@
           </div>
         </a>
 
-        <a href="mailto:ashe@neth.org">
+        <a href="mailto:ashe@neth.org" target="_blank">
           <div class="icon" aria-hidden="true">
             <svg viewBox="0 0 36 27" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" fill=var(--eerie-black)>
               <path d="M2.45453 26.9996H8.18176V13.0939L0 6.95898V24.5456C0 25.9014 1.0984 26.9996 2.45453 26.9996Z M0 3.68754V6.95947L8.18176 13.0943V2.46056L5.89087 0.742797C3.46293 -1.07722 0 0.654864 0 3.68754Z M8.18182 13.0947V2.46094L17.9999 9.82279L27.818 2.46094V13.0947L17.9999 20.4566L8.18182 13.0947Z M27.8182 2.46056V13.0943L36 6.95947V3.68754C36 0.654864 32.5371 -1.07722 30.1091 0.742797L27.8182 2.46056Z M27.8182 26.9996H33.5455C34.9016 26.9996 36 25.9014 36 24.5456V6.95898L27.8182 13.0939V26.9996Z">
