--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div style="margin-left: auto; margin-right: 10px;">
-        <a href="files/cv.pdf">
+        <a href="files/cv.pdf" target="_blank">
           <h1>
             CV
           </h1>
