FIX: made the UI better on mobile UPDATE: CV

--- a/static/index.html
+++ b/static/index.html
@@ -39,9 +39,9 @@
         About me:
       </h2>
 
-      <div style="display: flex; flex-direction: row; align-items: center;">
-        <div style="display: flex; flex-direction: column; align-items: center;">
-          <img src="img/misc/face.jpeg" style="object-fit: cover; width: 200px; height: 200px; float: left; margin: 25px; border-radius: 50%;">
+      <div style="display: block; overflow: hidden;">
+        <div style="display: flex; flex-direction: column; align-items: center; width: calc(var(--content-width) / 4); margin: 20px; float: left;">
+          <img src="img/misc/face.jpeg" style="object-fit: cover; width: calc(var(--content-width) / 4); height: calc(var(--content-width) / 4); float: left; margin: 25px; border-radius: 50%;">
         
           <div class="contact">
             <a href="https://github.com/asheneth" target="_blank">
@@ -83,7 +83,7 @@
         </div>
 
         <p>
-          I am an undergraduate computer science researcher at Worcester Polytechnic Institute (WPI, Class of 2025). I am currently looking for PhD positions in high-performance computing (HPC), high-throughput computing (HTC), and multi-task computing (MTC). My primary research as of late surrounds creating high-performance platform-specific algorithms for machine learning and inference. My research interests include many forms of parallel computing such as HPC, HTC, and MTC, volunteer computing, resource-constrained computing, and distributed systems. My primary work so far has been on finding solutions to computing problems in resource-constrained environments and utilizing them in non-constrained environments. I aim to utilize the mindset that I have acquired while working with both resource-constrained and non-constrained systems to further the field of parallel computing.
+          I am an undergraduate computer science researcher at Worcester Polytechnic Institute (WPI, Class of 2025). I am currently looking for PhD positions for fall 2025. My primary research as of late surrounds creating high-performance platform-specific algorithms for machine learning and inference. My research interests include many forms of parallel computing such as high-performance computing, high-throughput computing, and multi-task computing, volunteer computing, resource-constrained computing, and distributed systems. My primary work so far has been on finding solutions to computing problems in resource-constrained environments and utilizing them in non-constrained environments. I aim to utilize the mindset that I have acquired while working with both resource-constrained and non-constrained systems to further the field of parallel computing.
         </p>
       </div>
 
@@ -98,6 +98,13 @@
               UnIT Pruner: Unstructured Inference-Time Pruning for Battery-Free Systems
             </a>
             - Ashe Neth, Mohammad Nur Hossain Khan, Subrata Biswas, Asif Salekin, Bashima Islam
+          </p>
+
+          <p>
+            Preprint:
+            <a href="./files/unit_pruner_preprint.pdf">
+              link
+            </a>
           </p>
 
           <p>
@@ -121,6 +128,13 @@
 
           <p>
             Queer in AI Workshop at The Nations of the Americas Chapter of the Association for Computational Linguistics (Queer in AI @ NAACL 2024)
+          </p>
+
+          <p>
+            arXiv:
+            <a href="https://arxiv.org/abs/2409.18978" target="_blank">
+              link
+            </a>
           </p>
 
           <p>
