CHANGE: add border to my face

--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
 
       <div style="display: block; overflow: hidden;">
         <div style="display: flex; flex-direction: column; align-items: center; width: calc(var(--content-width) / 4); margin: 20px; float: left;">
-          <img src="img/misc/face.jpeg" style="object-fit: cover; width: calc(var(--content-width) / 4); height: calc(var(--content-width) / 4); float: left; margin: 25px; border-radius: 50%;">
+          <img src="img/misc/face.jpeg" style="object-fit: cover; width: calc((var(--content-width) / 4) - 10px); height: calc((var(--content-width) / 4) - 10px); float: left; margin: 25px; border-radius: 50%; border: solid; border-color: var(--card-border-color); border-width: 5px;">
         
           <div class="contact">
             <a href="https://github.com/asheneth" target="_blank">
