--- a/static/index.html
+++ b/static/index.html
@@ -123,7 +123,7 @@
             <a href="https://arxiv.org/abs/2409.18978" target="_blank">
               Pronoun Logic
             </a>
-            - Rose Bohrer, Ashe Neth
+            - Rose Bohrer and Ashe Neth
           </p>
 
           <p>
